syntax = "proto3";
package fairyring.fairblock;

option go_package = "fairyring/x/fairblock/types";

message FairblockTx {
  string data = 1;
  uint64 nonce = 2;
  string signed = 3;
}

