syntax = "proto3";
package fairyring.fairblock;

import "gogoproto/gogo.proto";
import "fairyring/fairblock/params.proto";
import "fairyring/fairblock/encrypted_tx.proto";
import "fairyring/fairblock/fairblock_nonce.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "fairyring/x/fairblock/types";

// GenesisState defines the fairblock module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated EncryptedTxArray encryptedTxArray = 3 [(gogoproto.nullable) = false];
  repeated FairblockNonce fairblockNonceList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
